# Gapseam

./: .gitignore  GFE.spec  GapSim.code-workspace  GapSim.spec  LEGACY_GAPSIM.md  README.md  build_gfe_macos.sh  build_gfe_portable.bat  build_gfs_macos.sh  build_gfs_portable.bat  export_all_code_txt_windows.bat  export_project_txt.py  pyproject.toml  run_emulator.bat  run_emulator.command  run_export_project_txt.bat  run_export_project_txt.command  run_gapsim.bat  run_gapsim.command  run_gfe.bat  run_gfe.command  run_simulator.bat  sync_from_github.bat  usg.json
.github/workflows/: windows-build.yml
addons/: README.md
addons/dent-analysis/: README.md  addon.json  addon.py  dent_analysis.py
emulator_research/: README.md  parameter_presets.json  research_manifest.json  structures.xlsx
emulator_research/presentations/: 에뮬레이터01_각도기반_직접_스퍼터_에치.pptx  에뮬레이터02_연구슬롯_미정.pptx  에뮬레이터03_반사_이온_에치.pptx  에뮬레이터03_연구슬롯_미정.pptx  에뮬레이터04_스퍼터_리데포.pptx  에뮬레이터04_연구슬롯_미정.pptx  에뮬레이터05_연구슬롯_미정.pptx  (+5 more)
gapsim/: .gitignore  pyproject.toml  pyproject.toml.bak  sources_dump.txt
presets/: run_presets.json
reports/: GapFill_Emulator_02_Usability_Modeling_Report.pptx
sample/: sample.json  smaple.json  z.json
tests/: conftest.py  test_addon_manager.py  test_addon_runtime.py  test_data_paths.py  test_dent_analysis.py  test_dent_analysis_addon.py  test_deposition_reparameterization.py  test_emulation_research_registry.py  test_engine_offset_smoke.py  test_ion_phase1_model.py  test_main_window_project_results.py  test_parameter_library.py  test_points_table_model.py  test_result_vector_view.py  test_run_logger.py  test_sputter_gaussian_editor.py  test_structure_library.py  test_trench_depo_emulation.py  test_watermark.py
(+78 files in other folders)
