[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapsim"
version = "0.0.0"
description = "GFS (GapFillSimulator) prototype (UI + engine scaffolding)"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "openpyxl>=3.1",
  "pillow>=10",
  "pyclipper>=1.3.0.post6",
]

[project.scripts]
gapsim = "gapsim.ui_qt.main_window:main"
gapsim-emulator = "gapsim.emulation.trench_depo_ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
