[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfe"
version = "0.0.0"
description = "GFE (Gap Fill Emulator) mini emulator for process experiments"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "openpyxl>=3.1",
  "pillow>=10",
  "pyclipper>=1.3.0.post6",
]

[project.scripts]
gfe = "gapsim.emulation.trench_depo_ui:main"
gapsim = "gapsim.emulation.trench_depo_ui:main"
gapsim-emulator = "gapsim.emulation.trench_depo_ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
